Bug 510915 - Dolphin split view does not open to full width when animations are disabled
Summary: Dolphin split view does not open to full width when animations are disabled
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: split view (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-22 11:58 UTC by d.edwards-dale
Modified: 2025-10-31 09:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video of issue (3.28 MB, video/mp4)
2025-10-22 11:58 UTC, d.edwards-dale
Details

Note You need to log in before you can comment on or make changes to this bug.
Description d.edwards-dale 2025-10-22 11:58:56 UTC
Created attachment 186001 [details]
Video of issue

SUMMARY
With animations in system settings set to defaults, activating split view shows an animation and the extra view from splitting slides into place at half the width of the current view real estate.
When changing the animation settings to "instant" (disabling the animations), activating split view then opens the second view with a very small width.

STEPS TO REPRODUCE
1. Open system settings to "animations" page
2. Reset settings to defaults (or change the "global animation speed" to any non-instant speed)
3. Open dolphin, close split-view if already activated
4. Activate split-view in dolphin
5. Observe the slide-out animation plays and the split-view is the correct width
6. Close the split view
7. Move back to system settings animations
8. Set the "global animation speed" slider to the right (instant) and click "Apply"
9. Switch to dolphin and activate split-view

OBSERVED RESULT
Split-view is opened with no animation played, but width is very small instead of being correct.

EXPECTED RESULT
Split-view is opened with no animation played and the width is the same as when an animation is played

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0


ADDITIONAL INFORMATION
Video attached showing issue
Comment 1 Méven 2025-10-23 14:24:57 UTC
This animation apparently counts on the duration of the animation without taking into consideration its variation.

Nice find.
That's easy to fix :)
Comment 2 Bug Janitor Service 2025-10-23 15:02:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1075
Comment 3 Méven 2025-10-28 09:45:30 UTC
Git commit 71bdbb87dde6ea6255b687af255ead75691d95c5 by Méven Car.
Committed on 28/10/2025 at 09:45.
Pushed by meven into branch 'master'.

dolphintabpage: when enabling split view without animation reset sizes

of the splitter.

So the previous size of a pontential leftover closed state does not
apply initially.

M  +87   -84   src/dolphintabpage.cpp
M  +0    -2    src/dolphintabpage.h

https://invent.kde.org/system/dolphin/-/commit/71bdbb87dde6ea6255b687af255ead75691d95c5
Comment 4 Méven 2025-10-31 09:26:07 UTC
Git commit 6687425a2307552d20fa9f111a03eff937a5cdf7 by Méven Car.
Committed on 31/10/2025 at 09:26.
Pushed by meven into branch 'release/25.08'.

dolphintabpage: when enabling split view without animation reset sizes

of the splitter.

So the previous size of a potential leftover closed state does not
apply initially.

(cherry picked from commit 71bdbb87dde6ea6255b687af255ead75691d95c5)

M  +87   -84   src/dolphintabpage.cpp
M  +0    -2    src/dolphintabpage.h

https://invent.kde.org/system/dolphin/-/commit/6687425a2307552d20fa9f111a03eff937a5cdf7