dolphintabpage: when enabling split view without animation reset sizes

of the splitter.

So the previous size of a pontential leftover closed state does not
apply initially.

BUG: 510915


(cherry picked from commit 71bdbb87dde6ea6255b687af255ead75691d95c5)

5f3f2dbb dolphintabpage: when enabling split view without animation reset sizes
c13f8268 Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: Méven Car <meven@kde.org>